# calango-engine

./: CMakeLists.txt  README.md
Engine/: Area2D.cpp  Area2D.h  Component.hpp  Engine.hpp  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  Entity.hpp  Retangle.cpp  Retangle.hpp  Scene.cpp  Scene.hpp  Sprite.cpp  Sprite.hpp  Vector2D.cpp  Vector2D.hpp  Window.cpp  Window.hpp  cpp.hint  main.cpp
Engine/x64/Debug/: Engine.exe.recipe  Engine.idb  Engine.ilk  Engine.vcxproj.FileListAbsolute.txt  vc143.idb
Engine/x64/Debug/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Engine.lastbuildstate  Engine.write.1u.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: calango_engine.cpp  calango_launcher.cpp
src/include/calango/: calango.hpp  calango_engine.hpp  calango_platform.hpp  color.hpp  entity.hpp  primitives.hpp  scene.hpp
src/include/glad/: glad.h
src/platform/: calango_platform_linux.cpp  calango_platform_win64.cpp
